// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render a button 1`] = `
<button
  class="sc-bdfBwQ djDoRM"
  color="primary"
>
  My button
</button>
`;

exports[`<Button /> should render a button with black color 1`] = `
<button
  class="sc-bdfBwQ clFkut"
  color="black"
>
  My button
</button>
`;

exports[`<Button /> should render a button with error color 1`] = `
<button
  class="sc-bdfBwQ OdhGG"
  color="error"
>
  My button
</button>
`;

exports[`<Button /> should render a button with grey color 1`] = `
<button
  class="sc-bdfBwQ kxhOzx"
  color="grey"
>
  My button
</button>
`;

exports[`<Button /> should render a button with primary color 1`] = `
<button
  class="sc-bdfBwQ djDoRM"
  color="primary"
>
  My button
</button>
`;

exports[`<Button /> should render a button with revPrimary color 1`] = `
<button
  class="sc-bdfBwQ kZrftw"
  color="revPrimary"
>
  My button
</button>
`;

exports[`<Button /> should render a large button 1`] = `
<button
  class="sc-bdfBwQ gGZMzL"
  color="primary"
>
  My button
</button>
`;

exports[`<Button /> should render a medium button 1`] = `
<button
  class="sc-bdfBwQ djDoRM"
  color="primary"
>
  My button
</button>
`;

exports[`<Button /> should render a small button 1`] = `
<button
  class="sc-bdfBwQ sKpaE"
  color="primary"
>
  My button
</button>
`;

exports[`<Button /> should render a x-large button 1`] = `
<button
  class="sc-bdfBwQ fwmgNr"
  color="primary"
>
  My button
</button>
`;
